compiler/testData/cli/js/compilationErrorConstDivByZero.out
compiler/testData/cli/js/compilationErrorConstDivByZero.kt:1:17: error: const 'val' initializer must be a constant value.
const val inf = 1 / 0
                ^^^^^
COMPILATION_ERROR
